--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "react",
-  "homepage": "https://lilyhkn.github.io/portfolio",
+  "name": "portfolio",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -21,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "browserslist": [
